The player no longer shows focus or active states on mobile, and displays the GUI at an appropriate size. Added support for touch events on the zoom controls. Added a single-finger pan gesture to the drag region.

--- a/assets/layout.css
+++ b/assets/layout.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 }
